--- a/src/assets/stylesheets/adminPage.scss
+++ b/src/assets/stylesheets/adminPage.scss
@@ -1,13 +1,56 @@
-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding:15% 0;
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 15% 0;
 }
-input{
-    background: white;
+input {
+  background: white;
 }
 #content_article {
-    height: 326px;
+  height: 326px;
 }
+
+.titleAdmin {
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  color: black;
+}
+.AdminArticles {
+  display: flex;
+}
+
+.AdminDetails > a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: black;
+}
+@media only screen and (max-width: 1441px) and (min-width: 1025px) {
+  .actuality {
+    display: flex;
+    flex-direction: column;
+    .article {
+        border: 8px solid black;
+        width: 239px;
+        img:hover{
+            width: 200px;
+        }
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+    .actuality {
+        display: flex;
+        flex-direction: column;
+      }
+}
+
+@media only screen and (max-width: 425px) {
+    .actuality {
+        display: flex;
+        flex-direction: column;
+      }
+}
+
