--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -55,7 +55,7 @@
   @media (min-width: 540px){
     .Links {
       color: rgb(0, 0, 0) !important;
-      border: 3px solid blue;
+      // border: 3px solid blue;
       z-index: 3!important;
       // right: 100% !important;
       top: 3% !important;
@@ -87,7 +87,7 @@
     } 
     .Links {
       color: rgb(0, 0, 0) !important;
-      border: 3px solid blue;
+      // border: 3px solid blue;
       z-index: 3!important;
       // right: 100% !important;
       top: 3% !important;
