--- a/src/assets/stylesheets/adminPage.scss
+++ b/src/assets/stylesheets/adminPage.scss
@@ -31,8 +31,8 @@ input {
     display: flex;
     flex-direction: column;
     .article {
-        border: 8px solid black;
-        width: 239px;
+        // border: 8px solid black;
+        width: 296px;
         img:hover{
             width: 200px;
         }
