--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -83,6 +83,8 @@ footer {
         p:nth-child(1){
           padding-top: 0%!important;
           min-width: 10vw!important;
+          margin-left: 88px;//Ajout Rebecca
+          margin-top: 130px;//Ajout Rebecca
         }
         img{
           min-width: 10vw!important;
