--- a/src/assets/stylesheets/sengager.scss
+++ b/src/assets/stylesheets/sengager.scss
@@ -46,7 +46,8 @@
   h1 {
     font-family: "Roboto-Bold";
     font-size: 2.6em;
-    margin-right: 154px;
+    margin-right: 115px;
+    margin-top: 177px;
   }
 
   .ligne {
