--- a/src/assets/stylesheets/aboutUs.scss
+++ b/src/assets/stylesheets/aboutUs.scss
@@ -36,6 +36,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 96px;///AJOUTER
 
   * {
     font-size: 1.2em;
