--- a/src/assets/stylesheets/footer.css
+++ b/src/assets/stylesheets/footer.css
@@ -7,10 +7,12 @@
 .homepage * {
   font-size: 1.2em;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
+  /* margin-top: 155px; */
 }
 
 .flex {
+  
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,6 +39,7 @@
 }
 
 footer {
+
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -49,6 +52,7 @@ footer {
 }
 
 footer * {
+
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
