--- a/src/assets/stylesheets/test.scss
+++ b/src/assets/stylesheets/test.scss
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: local("QuicksandRegular"),
+    url(../../assets/fonts/Quicksand/Quicksand-Regular.ttf);
+}
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"),
+    url(../../assets/fonts/Quicksand/Quicksand-Light.ttf);
+ }
+ @font-face {
+  font-family: "Peace Sans";
+  src: local("PeaceSans"),
+    url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
+}
+//
+
 body {
   font-family: "Open Sans", sans-serif;
   minwidth: 100%;
@@ -10,6 +37,11 @@ body {
     height: 50px;
 }
 
+
+.pStylingVisitor{
+  font-family: "Quicksand-Light";
+  margin-top: 42px;
+}
 
 //
 .admin-sidebar {
@@ -67,6 +99,7 @@ li:hover {
   border-bottom: 0.5px solid black;
   box-shadow: 0px 0px 4px rgba(0, 0, 0) inset;
 }
+
 .submenu {
   background: #1c1c1c;
 }
