--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -18,6 +18,12 @@
   src: local("QuicksandLight"),
     url(../../assets/fonts/Quicksand/Quicksand-Light.ttf);
  }
+ @font-face {
+  font-family: "Peace Sans";
+  src: local("PeaceSans"),
+    url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
+}
+//
 .testimony {
   // border-top: 1px solid black;
   margin-top: 14%;
@@ -43,16 +49,19 @@
   }
   h2 {
     margin-top: 10%;
-    font-family: "Roboto-Light";
+    // font-family: "Roboto-Light";
+    font-family: "Muli";
     // margin-right: 10%;
     font-weight: 100;
     font-size:20px;
     text-align: center;
   }
   h1 {
-    font-family: "Roboto-Bold";
+    // font-family: "Roboto-Bold";
+    font-family:"Peace Sans" ;
     // margin-right: 10%;
-    color: #D29E44 !important;
+    // color: #D29E44 !important;
+    color: black;
     // text-align: center;
     margin-bottom: 10px;
     font-size: 20px;
@@ -100,7 +109,7 @@
     }
   }
   :nth-child(3) {
-    margin-bottom: 10%;
+    margin-bottom: 3%;
     h5 {
       border-bottom: 1px solid #a2c2df;
       color: #a2c2df;
@@ -128,19 +137,23 @@
         margin: 0 !important;
       }
       h1 {
-        font-size: 40px!important;
+        font-size: 33px!important;
       }
       h2 {
-        font-size: 35px!important;  
+        font-size: 26px!important;  
       }
       h3,h4{
-        font-size:26px!important;
+        font-size:22px!important;
       }
       h5{
         font-size:20px!important;
       }
+      h6{
+        font-size:15px!important;
+        // font-family: "Quicksand-Regular";
+      }
       p{
-        font-size:24px!important;
+        font-size:17px!important;
       }
       .allBox{ 
           display:flex!important;
