--- a/src/assets/stylesheets/aboutUs.scss
+++ b/src/assets/stylesheets/aboutUs.scss
@@ -28,6 +28,12 @@
   src: local("QuicksandLight"),
     url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
 }
+@font-face {
+  font-family: "Peace Sans";
+  src: local("PeaceSans"),
+    url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
+}
+
 
 .aboutUsContainer {
   font-size: 62.5% !important;
@@ -45,7 +51,9 @@
   }
 
   h1 {
-    font-family: "Roboto-Bold";
+    // font-family: "Roboto-Bold";
+    font-family: "Peace Sans";
+    color: black;
     font-size: 2.6em;
     margin-right: 154px;
   }
