--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -1,4 +1,4 @@
- @import "./homepage.scss";
+@import "./homepage.scss";
 @font-face {
   font-family: "Muli-Bold";
   src: local("MuliBold"),
@@ -14,7 +14,8 @@ footer {
   text-align: left;
   margin: 4% 6%;
   font-family: "Muli-ExtraLight" !important;
-  order:0!important;
+  border: 0 !important;
+
   * {
     padding: 0;
     margin: 0;
@@ -28,111 +29,108 @@ footer {
     p {
       padding-top: 8%;
       width: 80%;
-      display: flex;  
+      display: flex;
     }
     img {
       width: 40%;
     }
   }
-  div:nth-child(2){
-    height:100%;
-    width:100%;
+  div:nth-child(2) {
+    height: 100%;
+    width: 100%;
     border-top: 1px solid black;
     display: flex;
     box-sizing: border-box;
     overflow: hidden;
-    .copyright{
+    .copyright {
       width: 50%;
       box-sizing: border-box;
     }
-    .Nav{
-      padding-top:4%;
-      text-align:center;
+    .Nav {
+      padding-top: 4%;
+      text-align: center;
       box-sizing: border-box;
-      height:100%;
-      width:50%;
+      height: 100%;
+      width: 50%;
       list-style-type: none;
-      li:nth-child(n){
-        padding-bottom: 5% ;
+      li:nth-child(n) {
+        padding-bottom: 5%;
       }
-      a{
+      a {
         text-decoration: none;
         color: black;
-      }      
+      }
     }
-    .contactFooter{
-      border:3px solid blue ;
-      
+    .contactFooter {
+      border: 3px solid blue;
     }
   }
- ///////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
- @media only screen and (min-device-width: 1024px) {
-  //  .contactMobile{
-  //    display: none!important;
-  //  }
-     display: flex!important;
-      div:nth-child(1){
-        padding-top: 0!important;
-        padding-bottom: 1%!important;
-        width: 20vw!important;
-        padding-right: 2%!important;
-        display: flex!important;
-        padding-top:2%!important;
-        margin-right: 5%!important;
-        max-height: 35vh!important;
-        p:nth-child(1){
-          padding-top: 0%!important;
-          min-width: 10vw!important;
-          margin-left: 88px;//Ajout Rebecca
-          margin-top: 130px;//Ajout Rebecca
-        }
-        img{
-          min-width: 10vw!important;
-          max-height: 26vh !important;
-        }
+  ///////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\
+  @media only screen and (min-device-width: 1024px) {
+    //  .contactMobile{
+    //    display: none!important;
+    //  }
+    display: flex !important;
+    div:nth-child(1) {
+      padding-top: 0 !important;
+      padding-bottom: 1% !important;
+      width: 20vw !important;
+      padding-right: 2% !important;
+      display: flex !important;
+      padding-top: 2% !important;
+      margin-right: 5% !important;
+      max-height: 35vh !important;
+      p:nth-child(1) {
+        padding-top: 0% !important;
+        min-width: 10vw !important;
+        margin-left: 88px; //Ajout Rebecca
+        margin-top: 130px; //Ajout Rebecca
       }
-      div:nth-child(2){
-        border-top:none!important;
+      img {
+        min-width: 10vw !important;
+        max-height: 26vh !important;
       }
-      .footerDesktop{
-        display: flex!important;
-        flex-direction: row!important;
-        height: 50vh!important;
-        width: 50vw!important;
-  
+    }
+    div:nth-child(2) {
+      border-top: none !important;
+    }
+    .footerDesktop {
+      display: flex !important;
+      flex-direction: row !important;
+      height: 50vh !important;
+      width: 50vw !important;
 
-        // border:6px solid black!important;
-        .copyright{
-          // border:3px solid blue;
-          width: 20vw!important;
-          order: 1!important;
-          height: 20vh!important;
-          // margin-top:2%!important ;
-          // a{
+      // border:6px solid black!important;
+      .copyright {
+        // border:3px solid blue;
+        width: 20vw !important;
+        order: 1 !important;
+        height: 20vh !important;
+        // margin-top:2%!important ;
+        // a{
 
-          // }
+        // }
+      }
+      .Nav {
+        width: 22vw !important;
+        order: 0 !important;
+        // border:3px solid yellowgreen;
+        padding-top: 2% !important ;
+        padding-top: 4%;
+        text-align: center;
+        box-sizing: border-box;
+        height: 100%;
+        width: 50%;
+        list-style-type: none;
+        li:nth-child(n) {
+          padding-bottom: 5%;
         }
-        .Nav{
-          width:22vw!important;
-          order:0!important;
-          // border:3px solid yellowgreen;
-          padding-top:2%!important ;
-          padding-top:4%;
-          text-align:center;
-          box-sizing: border-box;
-          height:100%;
-          width:50%;
-          list-style-type: none;
-          li:nth-child(n){
-            padding-bottom: 5% ;
-          }
-          a{
-            cursor: pointer;
-            text-decoration: none;
-            color: black;
-          }      
+        a {
+          cursor: pointer;
+          text-decoration: none;
+          color: black;
         }
       }
-        
+    }
   }
 }
