--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -34,7 +34,6 @@
     url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
 }
 
-
 header {
   display: flex;
   justify-content: center;
@@ -117,6 +116,9 @@ header {
     p {
       font-size: 15px !important;
     }
+    .facebookLink {
+      display: none;
+    }
 
     .tagline {
       display: flex !important;
@@ -178,19 +180,15 @@ header {
     // height: 100vh !important;
 
     .HomepageImage {
-      
-      margin-right: 238px;//new rebecca à transposer: TAILLE IMAGE DESKTOP
-      margin-top: -51px;
-    
-      .facebookLegend { //new rebecca àà transposer
-       
-        // border: 2px solid blue;
-        margin-right: 825px;
+      margin-right: 238px;
+      margin-top: -202px;
+
+      .facebookLegend {
+        margin-right: 820px;
         color: gray;
+        margin-top: -25px;
       }
     }
-
-   
 
     article {
       padding-top: 10% !important;
@@ -206,8 +204,8 @@ header {
       flex-direction: column !important;
       /////// LOGO + SLOGAN
 
-      .tagline{
-        color: transparent  !important;
+      .tagline {
+        color: transparent !important;
       }
 
       .logo {
@@ -266,7 +264,7 @@ header {
         border-radius: 5px;
       }
     }
-    /////////// HEADER IMAGE +  svg FACEBOOK + LINK ///
+
     section {
       transform: scaleX(-1);
       opacity: rgba(0, 0, 0, 0.7);
@@ -278,8 +276,8 @@ header {
       background-repeat: no-repeat;
       justify-content: flex-end !important;
       align-items: flex-end !important;
-      width: 63vw;
-      height: 100vh;
+      width: 60vw;
+      height: 124vh;
       margin: 0;
       position: relative;
       left: 24%;
@@ -294,7 +292,6 @@ header {
         transform: scaleX(-1);
         margin: 5% 102% 5% 11% !important;
         img {
-         
           margin-right: 37px;
           height: 22px;
           margin-top: -30px;
