--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -53,6 +53,9 @@
 
   // SURFACE DUO
   @media (min-width: 540px) {
+    .Brg {
+      margin-left: "220px";
+    }
     .Links {
       color: rgb(0, 0, 0) !important;
       // border: 3px solid blue;
@@ -66,7 +69,7 @@
         // display: flex !important;
         font-family: "Muli-Light";
         font-size: 16px !important;
-        color: black !important;
+        // color: black !important;
         // display:none;
       }
       li {
@@ -77,6 +80,7 @@
   // IPAD
   @media (min-width: 768px) {
     left: 50%;
+    
 
     .burgerMenu {
       display: none;
@@ -99,10 +103,10 @@
         display: flex !important;
         font-family: "Muli-Light";
         font-size: 21px !important; //MODIFIER
-        color: black !important;
+        // color: black !important;
 
-        margin-right: -5px; // RAJOUTER
-        margin-top: 2px; // RAJOUTER
+        // margin-right: -5px;
+        margin-right: 49px;
         padding-left: 18px;
       }
 
@@ -125,14 +129,15 @@
       // .a1,.a3{
       //   left: 60.9%!important;
       // }
-      .contactTest{
+      .contactTest {
         padding-left: -1px;
         padding-bottom: 1px;
         font-size: 20px;
       }
       .Links {
         visibility: visible !important;
-        margin-left: 586px;
+        // margin-left: 586px;
+        margin-left: 221px;
       }
       // .BurgerLink {
 
