--- a/src/assets/stylesheets/test.scss
+++ b/src/assets/stylesheets/test.scss
@@ -30,7 +30,7 @@ body {
   minwidth: 100%;
   height: 100%;
   margin: 0 auto;
-  background: #f2f2f2;
+  // background: #f2f2f2;
 }
 //img
 .AdminPhoto{
@@ -40,7 +40,7 @@ body {
 
 .pStylingVisitor{
   font-family: "Quicksand-Light";
-  margin-top: 42px;
+  margin-top:51px;
 }
 
 //
@@ -86,13 +86,13 @@ h3 {
   box-shadow: 0px 0px 4px rgba(0, 0, 0) inset;
   margin-left: 19px;
 }
-li {
+.liAdmin{
   list-style-type: none;
   padding: 15px;
   border-bottom: 0.5px solid black;
   cursor: pointer;
 }
-li:hover {
+.liAdmin:hover {
   list-style-type: none;
   padding: 15px;
   background: #151515;
